Added Problems 1,2 from LaTeX draft to the notebook

--- a/Problem_3_4_5.ipynb
+++ b/Problem_3_4_5.ipynb
@@ -22,6 +22,43 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Problem 1**\n",
+    "Let $\\{x_1,...,x_N\\}$ be $Ν$ random vectors following a multidimensional Normal distribution.\n",
+    "Assuming that the covariance matrix is known, derive analytically the Maximum Likelihood\n",
+    "Estimate $\\mu_{ML}$ for the distribution's mean.   "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Solution**\n",
+    "We have $N$ random vectors $X = \\{\\vec{x_1},...,\\vec{x_n}\\}$ following a Normal multidimensional distribution $N(\\vec{\\mu},\\Sigma)$, where the covariance matrix $\\Sigma$ is known and we want to get the best point estimate for the parameter vector for the mean (since we are talking about a multidimensional normal) of the distribution $\\vec{\\mu}$ given the sample $X$, without utilizing any prior information. Following Bayes's rule: $$p(\\vec{\\mu}|X) = \\frac{p(X|\\vec{\\mu})p(\\vec{\\mu})}{p(X)} \\ \\ (1)$$ \n",
+    "where: \n",
+    "- $p(\\vec{\\mu}|X)$ is the posterior pdf of $\\vec{\\mu}$ given the sample vectors $X$ \n",
+    "-  $p(X|\\vec{\\mu})$ is the likelihood, which corresponds to the normal pdf that is most likely to have generated the sample data $X$ given the mean $\\vec{\\mu}$.\n",
+    "- $p(\\vec{\\mu})$ is our prior belief in the form of the pdf of the mean $\\vec{\\mu}$\n",
+    "$P(X) = \\int P(X|\\mu)P(\\mu)$ is a marginal probability not dependent on $\\vec{\\mu}$ that scales the posterior so that $\\int p(\\vec{\\mu}|X) = 1$ and does not affect its shape. Since we are interested in finding the pdf's maximum optima with respect to $\\mu$, the point estimate where the partial derivative is 0, we are only concerned with the shape of the pdf. Thus the posterior is proportional to the likelihood multiplied with the prior:\n",
+    "$$(1) \\implies  p(\\vec{\\mu}|X) \\propto p(X|\\vec{\\mu})p(\\vec{\\mu}) $$\n",
+    "Since we are interested in a point estimate of the mean $\\vec{\\mu}$ without taking into account any prior beliefs, we can try to approximately maximize the posterior by maximizing only the likelihood in equation $(1)$ with respect to $\\mu$. \n",
+    "\\\\\n",
+    "\\\\\n",
+    "Thus we need to find $\\vec{\\mu_{ML}} = argmax_\\mu p(X|\\vec{\\mu})$: $$p(X|\\vec{\\mu}) =\\prod_{i=1}^Np(\\vec{x_i}|\\vec{\\mu})$$ Additionally since maximizing a function is the same as maximizing the logarithm of said function (because the logarithm is a monotonic function):\n",
+    " $$\\ln p(X|\\vec{\\mu}) = \\ln(\\prod_{i=1}^Np(\\vec{x_i}|\\vec{\\mu})) = \\sum_{i=1}^N\\ln p(\\vec{x_i}|\\vec{\\mu})  = \\sum_{i=1}^N \\ln (\\frac{1}{(2\\pi)^{\\frac{D}{2}}|\\Sigma|^{\\frac{1}{2}}} exp(-\\frac{1}{2} (\\vec{x}_i-\\vec{\\mu})^T \\Sigma^{-1}(\\vec{x}_i-\\vec{\\mu})))$$\n",
+    " Since we are interested in maximizing $\\mu$, the term before the exponential can be written as a constant $C$, since it does not contain the $\\mu$ parameter, thus:\n",
+    "$$\\implies \\sum_{i=1}^N( \\lnC -\\frac{1}{2}(\\vec{x}_i-\\vec{\\mu})^T \\Sigma^{-1}(\\vec{x}_i-\\vec{\\mu})) = N\\ln C -\\frac{1}{2} \\sum_{i=1}^N((\\vec{x}_i-\\vec{\\mu})^T \\Sigma^{-1}(\\vec{x}_i-\\vec{\\mu}))$$\n",
+    "Taking the partial derivative with respect to $\\mu$ and using the differentiation rule: $\\frac{d(\\vec{\\theta}^TA\\vec{\\theta})}{d(\\vec{\\theta})}=2A\\vec{\\theta}$\n",
+    "$$\\implies \\frac{\\partial{\\ln p(X|\\vec{\\mu})}}{\\partial{\\vec{\\mu}}} = 0 - \\frac{2}{2}\\Sigma^{-1}\\sum_{i=1}^N(x_i - \\vec{\\mu}) = -\\Sigma^{-1}\\sum_{i=1}^N x_i + \\Sigma^{-1}N\\vec{\\mu}$$\n",
+    "setting the derivative to zero to find the maxima of $\\vec{\\mu}$ we get:\n",
+    "$$\\implies \\Sigma^{-1}N\\vec{\\mu} = \\Sigma^{-1}\\sum_{i=1}^N x_i \\implies \\vec{\\mu}_{ML} = \\frac{1}{N}\\sum_{i=1}^N x_i $$"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
