fixed some markdown displaying issues

--- a/Problem_3_4_5.ipynb
+++ b/Problem_3_4_5.ipynb
@@ -33,7 +33,7 @@
     "* [Problem 3:  Bayesian Inference, univariate Gaussian with unknown mean](#problem-3-bayesian-inference-univariate-gaussian-with-unknown-mean)\n",
     "    * [Problem 3.1:  Mean and variance of the Gaussian posterior (formula proof)](#problem-31-mean-and-variance-of-the-posterior-proof)\n",
     "    * [Problem 3.2: Bayesian Inference of the unknown posterior mean (code)](#problem-32-bayesian-inference-of-the-unknown-posterior-mean-code)\n",
-    "* [Problem 4](#problem-4-polynomial-regression)"
+    "* [Problem 4: Polynomial-regression (code)](#problem-4-polynomial-regression)"
    ]
   },
   {
@@ -176,16 +176,18 @@
     "All distributions refer to univariate normals of form: $$p(x|\\mu,\\sigma^2) = \\frac{1}{\\sqrt{2\\pi\\sigma^2}}exp(-\\frac{(x-\\mu)^2}{2\\sigma^2})$$\n",
     "\n",
     "To achieve this we create a class: `Univariate_Bayesian_Inference` to house all the methods needed for the tasks above.\n",
-    "- Since the prior distribution, as well as the generating distribution are known we pass their parameters as arguments in the class constructor \n",
-    "- `generating_distribution_sampling` allows us to generate a dataset of a defined number of samples via the normal function provided by the numpy library:  `np.random.normal(mean,stdv,size)`, since we know the variance, we pass its square root `var**(1/2)` as the standard deviation. The `size` of the sample is defined when the method is called\n",
-    "- `prior_distribution_sampling` works just like the `generating_distribution_sampling` but with the prior parameters\n",
-    "- `MAP_estimation` utilizes equations we have derived: (1), (2) to estimate via the Maximum a Posteriori (MAP) method the mean and variance of the posterior distribution \n",
-    "- `posterior_distribution_sampling` finally, allows us to sample from the posterior after we have estimated its parameters"
+    "1. Since the prior distribution, as well as the generating distribution are known we pass their parameters as arguments in the class constructor \n",
+    "2. First  `generating_distribution_sampling` allows us to generate a dataset $X$ of a defined number of observations via the normal function provided by the numpy library:  `np.random.normal(mean,stdv,size)`, since we know the variance, we pass its square root `var**(1/2)` as the standard deviation. The `size` of the sample is defined when the method is called by the argument `draws`\n",
+    "3. Then, passing the generated dataset $X$ to the `MAP_estimation` method utilizes equations we have derived: (1), (2) to estimate the mean and variance of the posterior distribution.\n",
+    "  \n",
+    "If we wish to plot the pdf's of the prior, generating and the estimated posterior distribution we can:\n",
+    "1. Get the 100 evenly seperated points from each distibution utilizing methods: `generative_distribution_points`, `prior_distribution_points` , `posterior_distribution_points`, which use the known parameters (passed as arguments in the class constructor), of the generating and prior distribution as well as the estimated mean from the `MAP_estimation` to pick observations in the range of the distribution in the x-axis and find their target on y-axis. \n",
+    "2. We use these points to generate each of the pdfs on the same figure utilizing the `plot_pdfs` method "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,43 +260,37 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Having created the `Bayesian_MAP` we can estimate the mean and variance of the posterior using the Maximum a Posteriory(MAP) method for sample datasets $X$ of size $N = [N= 1, 5, 10, 20, 50, 100, 1000]$, where $X\\sim N(7,16)$ with a prior belief for the mean $\\mu \\sim N(0,4)$. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We begin by initializing an instance of the `Bayesian_experiment_1` class called `experiment` and pass in the relevant known parameters of the prior and generating distributions"
+    "Having created the `Univariate_Bayesian_Inference` we can estimate the mean and variance of the posterior using the Maximum a Posteriory(MAP) method for sample datasets $X$ of size $N = [N= 1, 5, 10, 20, 50, 100, 1000]$, where $X\\sim N(7,16)$ with a prior belief for the mean $\\mu \\sim N(0,4)$. We begin by initializing an instance of the `Univariate_Bayesian_Inference` class called `experiment` and pass in the relevant known parameters of the prior and generating distributions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = Bayesian_MAP(prior_mean=0,prior_var=4,generating_mean=7,generating_var=16)"
+    "experiment = Univariate_Bayesian_Inference(prior_mean=0,prior_var=4,generating_mean=7,generating_var=16)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Now we solve the problem a) b) step by step:\n",
     "1. We sample $N$ points from the generating distribution\n",
     "3. We utilize the MAP method to estimate the mean $equation \\ (1)$ and variance $equation \\ (2)$ of the posterior for the $N$ points sampled from the generating distribution\n",
-    "4. We use the estimated parameters to define the posterior and draw $N$ samples from it\n",
-    "5. We also sample $N$ points from the prior distribution \n",
-    "6. We plot the kernel density estimation (essentially a histogram with a gaussian kernel applied) of the samples for each distribution. "
+    "4. We use the estimated mean and variance of the posterior as well as the known generating, prior mean and variance to retrieve 100 observation-target pairs for each distribution \n",
+    "5. We plot the distributions per sample size $N$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -418,6 +414,7 @@
     }
    ],
    "source": [
+    "#seed for reproducability\n",
     "np.random.seed(42)\n",
     "for i in [1,5,10,20,50,100,1000]:\n",
     "    #Get sample points \n",
@@ -432,13 +429,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Results**"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "As we can see, as the number of samples increases, our estimate for the mean approaches the true value of $\\mu=7$ and our uncertainty of each estimation quantified by $\\sigma_N^2$ is decreasing.\n",
     "\n",
     "Looking at equation (2) $\\sigma^2_N = \\frac{\\sigma^2\\sigma^2_0}{N\\sigma^2_0 + \\sigma^2} \\ \\ (2)$ and considering our prior beliefs $N \\sim (0,4)$ compared to the true generating distribution $X \\sim (7,16)$ the reason behind this observation is clear:   \n",
-    "1. \n",
+    "1. We bagin by a false belief, not close the true distribution thus\n",
     "2. \n",
     "3. "
    ]
