--- a/Solutions_Notebook.ipynb
+++ b/Solutions_Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -864,12 +864,12 @@
     "where $\\phi(x)$, $\\Phi$ are the polynomial constructors (see `polynomial_model_construcotr` in Problem 4) for each test point $x$ and the training set $X$ respectively and $S$, is given by:\n",
     "$$S = (\\alpha I + \\beta \\Phi\\Phi^T)^{-1}$$\n",
     "\n",
-    "Utilizing these equations we code the `full_bayesian` function, which takes as arguments, the prior and generating variance, the $\\Phi$ matrix for the test and train points as well as the training targets. It is used to find the $m(x)$ and $\\sigma^2(x)$ of the predictive distribution for each $x$ in the test set "
+    "Utilizing these equations we code the `full_bayesian` function, which takes as arguments, the inverse of the prior and generating variance, the $\\Phi$ matrix for the test and train points as well as the training targets. It is used to find the $m(x)$ and $\\sigma^2(x)$ of the predictive distribution for each $x$ in the test set "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
     "  # Plot the results for each training set\n",
     "  ax = axs[i%2,i//2]\n",
     "  ax.plot(x,y,label=\"True Model sin(2πx)\", color = \"Black\",linewidth=2,linestyle='-.')\n",
-    "  ax.fill_between(X_test,m_y - 1*var_y**(1/2), m_y + 1*var_y**(1/2), color = \"tab:red\", alpha= 0.2,label = \"Predictive distribution stdv, up to 2*σ\")\n",
+    "  ax.fill_between(X_test,m_y - var_y**(1/2), m_y + var_y**(1/2), color = \"tab:red\", alpha= 0.2,label = \"Predictive distribution stdv, up to 2*σ\")\n",
     "  ax.fill_between(X_test,m_y - 2*var_y**(1/2), m_y + 2*var_y**(1/2), color = \"tab:red\", alpha= 0.2)\n",
     "  ax.plot(X_test,m_y, color = \"tab:blue\" , label = \"Predictive distribution mean\")\n",
     "  ax.scatter(X_train,y_train, color = \"tab:green\", label=\"Training set\")\n",
